// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleAutoComplete should render with suggestions 1`] = `
<DocumentFragment>
  <div
    class="singleAutoComplete"
  >
    <input
      data-testid="single-auto-complete-input"
      value="Test"
    />
    <div
      data-open="true"
      data-testid="single-auto-complete-popover"
    >
      <button
        type="button"
      >
        close
      </button>
      <button
        data-index="0"
        type="button"
      >
        Suggestion 1
      </button>
      <button
        data-index="1"
        type="button"
      >
        Suggestion 2
      </button>
      <button
        data-index="2"
        type="button"
      >
        Suggestion 3
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleAutoComplete should render with suggestions 2`] = `
<div
  data-open="true"
  data-testid="single-auto-complete-popover"
>
  <button
    type="button"
  >
    close
  </button>
  <button
    data-index="0"
    type="button"
  >
    Suggestion 1
  </button>
  <button
    data-index="1"
    type="button"
  >
    Suggestion 2
  </button>
  <button
    data-index="2"
    type="button"
  >
    Suggestion 3
  </button>
</div>
`;
